# 01_linear_algebra

./: principal_component_analysis.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/.vscode-docker/: c_cpp_properties.json
01.pca/: principal_component_analysis.ipynb  principal_component_analysis2.ipynb
01.pca/scripts/: pca.py  pca_theoretical_form.py
01_linear_algebra/: README.md  reprojection.py
01_linear_algebra/01_pca/jupyter_notebook/: tmp.ipynb
01_linear_algebra/01_pca/scripts/: eigenface.py
01_linear_algebra/05_orthogonality_and_least_squares/: CMakeLists.txt
01_linear_algebra/05_orthogonality_and_least_squares/scripts/: 01_orthonormal_sets.py  02_ax_b_least_square.py  03_qr_decomposition.py  04_kalman_filter.py  05_kalman_filter_least_square.py  qr_decomposition2.py
01_linear_algebra/05_orthogonality_and_least_squares/src/: least_square.cpp
01_pca/jupyter_notebook/: principal_component_analysis.ipynb
01_pca/scripts/: pca_numpy_convention.py
02.covariance_matrix/jupyter_notebook/: cov_matrix.ipynb  principal_component_analysis.ipynb
02.covariance_matrix/scripts/: main.py
03.optimization/scripts/: optimization.py
03_linear_equation/scripts/: 2.matrix.py
03_state_estimation/.devcontainer/: Dockerfile  devcontainer.json
03_state_estimation/02_kalman_and_bayesian_filters_in_python/: 00-Preface.ipynb  03-Gaussians.ipynb
04_eigenvector_n_eigenvalue/scripts/: iterative_estimate.py  markov_chain.py
04_slam/maps/: my_map.pgm  my_map.yaml
05_orthogonality_and_least_squares/src/: least_square.cpp
(+11 files in other folders)
